[package]
name = "ggcat_dumper"
version = "0.1.1"
edition = "2024"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Utils
utils = { package = "ggcat_utils", path = "../utils" }

# Common libraries
parallel-processor = "0.1.29"
streaming-libdeflate-rs = "0.1.5"
nightly-quirks = "0.1.4"

# Common pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }
colors = { package = "ggcat_colors", path = "../colors" }
structs = { package = "ggcat_structs", path = "../structs" }
minimizer_bucketing = { package = "ggcat_minimizer_bucketing", path = "../minimizer_bucketing" }
kmers_transform = { package = "ggcat_kmers_transform", path = "../kmers_transform" }
rayon = "1.10.0"
byteorder = "1.5.0"
hashbrown = "0.14.5"
csv = "1.3.0"
parking_lot = "0.12.3"
lz4 = "1.25.0"
flate2 = "1.0.30"
ggcat-logging = { version = "2.0.0", path = "../logging" }
anyhow = "1.0.89"
typenum = "1.18.0"

[features]
devel-build = []
