[package]
name = "ggcat_hashes"
version = "1.1.1"
edition = "2021"
[lib]
name = "ggcat_hashes"

[dependencies]
serde = "1.0.203"
ahash = "0.8.11"

# Config
config = { package = "ggcat_config", path = "../config" }

# Static dispatch
dynamic-dispatch = "0.5.4"

[[bench]]
name = "hashes-bench"
harness = false

[dev-dependencies]
pcg_rand = "0.13.0"
rand = "0.8.5"
utils = { package = "ggcat_utils", path = "../utils" }
io = { package = "ggcat_io", path = "../io" }
criterion = "0.5.1"


