[package]
name = "ggcat_kmers_transform"
version = "0.1.0"
edition = "2021"
[dependencies]

# Config
config = { package = "ggcat_config",  path = "../config" }
utils = { package = "ggcat_utils",  path = "../utils" }

# Common libraries
parallel-processor = "0.1.15"
streaming-libdeflate-rs = "0.1.5"
nightly-quirks = "0.1.2"
hashes = { package = "ggcat_hashes",  path = "../hashes" }
minimizer_bucketing = { package = "ggcat_minimizer_bucketing",  path = "../minimizer_bucketing" }

# Other libraries
io = { package = "ggcat_io",  path = "../io" }
parking_lot = "0.12.1"
typenum = "1.16.0"
replace_with = "0.1.7"
tokio = "1.28.0"


# Tracing
instrumenter = "0.1.1"
