[package]
name = "ggcat_minimizer_bucketing"
version = "0.1.0"
edition = "2021"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Common libraries
parallel-processor = "0.1.13"
streaming-libdeflate-rs = "0.1.5"
nightly-quirks = "0.1.2"

# Pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }

# Other libraries
replace_with = "0.1.7"
serde = "1.0.160"
bincode = "1.3.3"
typenum = "1.16.0"
parking_lot = "0.12.1"
