[package]
name = "ggcat_minimizer_bucketing"
version = "1.1.1"
edition = "2021"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Common libraries
parallel-processor = "0.1.20"
streaming-libdeflate-rs = "0.1.5"
nightly-quirks = "0.1.4"

# Pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }

# Other libraries
replace_with = "0.1.7"
serde = "1.0.203"
bincode = "1.3.3"
typenum = "1.17.0"
parking_lot = "0.12.3"
ggcat-logging = { version = "1.1.1", path = "../logging" }
