[package]
name = "querier"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Config
config = { path = "../config" }

# Utils
utils = { path = "../utils" }


# Static dispatch
dynamic-dispatch = "0.3.0"

# Common libraries
parallel-processor = "0.1.0"
streaming-libdeflate-rs = "0.1.0"
nightly-quirks = "0.1.0"

# Common pipeline libraries
hashes = { path = "../hashes" }
io = { path = "../io" }
colors = { path = "../colors" }
structs = { path = "../structs" }
minimizer_bucketing = { path = "../minimizer_bucketing" }
kmers_transform = { path = "../kmers_transform" }
typenum = "1.15.0"
rayon = "1.5.3"
byteorder = "1.4.3"
hashbrown = "0.12.3"
csv = "1.1.6"
parking_lot = "0.12.1"
lz4 = "1.24.0"
flate2 = "1.0.24"

[features]
devel-build = []
