[package]
name = "ggcat_structs"
version = "1.1.1"
edition = "2021"
[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
config = { package = "ggcat_config", path = "../config" }
io = { package = "ggcat_io", path = "../io" }
parallel-processor = "0.1.20"
serde = { version = "1.0.203", features = ["derive"] }


[features]
support_kmer_counters = []
