[package]
name = "ggcat_structs"
version = "2.2.0"
edition = "2024"
[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
config = { package = "ggcat_config", path = "../config" }
io = { package = "ggcat_io", path = "../io" }
parallel-processor = "0.2.5"
serde = { version = "1.0.203", features = ["derive"] }
typenum = "1.20.0"


[features]
support_kmer_counters = []
