[package]
name = "instrumenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "analyzer"
path = "bin/analyzer.rs"
required-features = ["analyzer"]

[dependencies]
instrumenter-derive = { path = "instrumenter-derive-rs" }
dashmap = "5.3.4"
parking_lot = "0.12.1"
thread_local = "1.1.4"

# Tracing libraries
tracing = { version = "0.1.35", optional = true }
libc = { version = "0.2.126", optional = true }
papi = { path = "libs/papi-rs", optional = true }
serde = { version = "1.0.138", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.82", optional = true }

# Analyzer libraries
human_format = { version = "1.0.3", optional = true }
structopt = { version = "0.3.26", optional = true }
plotters = { version = "0.3.2", optional = true }

[features]
# Enabled triggers
enabled = ["tracing", "libc", "papi", "serde", "serde_json", "instrumenter-derive/enabled"]
analyzer = ["human_format", "structopt", "plotters", "enabled"]