[package]
name = "parallel-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam = "0.8.2"
filebuffer = "0.4.0"
lazy_static = "1.4.0"
libc = "0.2.134"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"] }
rand = "0.8.5"
rayon = "1.5.3"
replace_with = "0.1.7"
unchecked-index = "0.2.2"
nightly-quirks = { path = "../nightly-quirks" }

# Memory tracking
dashmap = { version = "5.4.0", features = ["serde"] }
serde = "1.0.145"
serde_json = "1.0.85"
backtrace = "0.3.66"
simple-process-stats = { path = "libraries/simple-process-stats", optional = true }
counter-stats = { git = "https://github.com/Guilucand/counter-stats.git" }
desse = "0.2.1"
bincode = "1.3.3"
lz4 = "1.24.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "rt", "sync"] }

[dev-dependencies]
tokio-scoped = "0.2.0"
voracious_radix_sort = { version = "1.1.1", features = ["voracious_multithread"] }


[features]
no-stats = []
memory-guards = []
track-usage = []
process-stats = ["simple-process-stats"]
