[package]
name = "querier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Config
config = { path = "../../config" }

# Utils
utils = { path = "../../utils" }


# Static dispatch
static-dispatch = { path = "../../libs/static-dispatch" }

# Common libraries
parallel-processor = { path = "../../libs/parallel-processor-rs" }
libdeflate-rs = { path = "../../libs/libdeflate-rs" }
nightly-quirks = { path = "../../libs/nightly-quirks" }

# Common pipeline libraries
hashes = { path = "../common/hashes" }
io = { path = "../common/io" }
colors = { path = "../common/colors" }
structs = { path = "../common/structs" }
minimizer_bucketing = { path = "../common/minimizer_bucketing" }
kmers_transform = { path = "../common/kmers_transform" }
typenum = "1.15.0"
rayon = "1.5.3"
byteorder = "1.4.3"
hashbrown = "0.12.1"
csv = "1.1.6"
parking_lot = "0.12.1"
lz4 = "1.23.3"
flate2 = "1.0.24"

[features]
devel-build = []
