[package]
name = "instrumenter-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }

[features]
enabled = []