[package]
name = "instrumenter-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.42", optional = true }
quote = { version = "1.0.20", optional = true }
syn = { version = "1.0.98", features = ["full"], optional = true }

[features]
enabled = ["proc-macro2", "quote", "syn"]
