[package]
name = "instrumenter-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.44", optional = true }
quote = { version = "1.0.21", optional = true }
syn = { version = "1.0.101", features = ["full"], optional = true }

[features]
enabled = ["proc-macro2", "quote", "syn"]
